SDA-5: Changed profession textview appearance in recyclerview items.

--- a/app/src/main/res/layout/fragment_my_contacts.xml
+++ b/app/src/main/res/layout/fragment_my_contacts.xml
@@ -168,7 +168,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalMyContacts014"
 
-        tools:listitem="@layout/contact_item" />
+        tools:listitem="@layout/item_contact" />
 
     <FrameLayout
         android:id="@+id/frameLayoutButtonsContainer"
