--- a/app/src/main/res/layout-land/fragment_my_contacts.xml
+++ b/app/src/main/res/layout-land/fragment_my_contacts.xml
@@ -98,7 +98,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMyContactsLand020"
 
-        tools:listitem="@layout/contact_item"/>
+        tools:listitem="@layout/item_contact" />
 
     <FrameLayout
         android:id="@+id/frameLayoutButtonsContainer"
