--- a/app/src/main/res/layout/item_add_contacts.xml
+++ b/app/src/main/res/layout/item_add_contacts.xml
@@ -105,16 +105,19 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textViewMainProfession"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dimension_8dp"
 
+        android:ellipsize="end"
         android:fontFamily="@font/opensans_regular"
+        android:lines="1"
         android:textSize="12sp"
 
+        app:layout_constraintEnd_toEndOf="@id/textViewMainName"
         app:layout_constraintStart_toStartOf="@id/textViewMainName"
         app:layout_constraintTop_toBottomOf="@id/horizontalGuideline_contactItem_054"
-        tools:text="Profession" />
+        tools:text="Profession1234123412341234123412341234123412341234" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textViewAddContactContactsAdd"
