--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -72,8 +72,8 @@
         android:id="@+id/checkBoxSelectedState"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:visibility="gone"
         android:button="@drawable/cb_multiple_select_selector"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/verticalGuideline_contactItem_006"
         app:layout_constraintTop_toTopOf="parent" />
@@ -97,8 +97,8 @@
         android:id="@+id/textViewMainName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimension_8dp"
         android:layout_marginStart="@dimen/dimension_8dp"
+        android:layout_marginTop="@dimen/dimension_8dp"
         android:layout_marginEnd="16dp"
 
         android:ellipsize="end"
@@ -115,16 +115,19 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textViewMainProfession"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dimension_8dp"
 
+        android:ellipsize="end"
         android:fontFamily="@font/opensans_regular"
+        android:lines="1"
         android:textSize="12sp"
 
+        app:layout_constraintEnd_toEndOf="@id/textViewMainName"
         app:layout_constraintStart_toStartOf="@id/textViewMainName"
         app:layout_constraintTop_toBottomOf="@id/horizontalGuideline_contactItem_054"
-        tools:text="Profession" />
+        tools:text="Profession1234123412341234123412341234123412341234" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageButtonDelete"
