SDA-5: Added autologin, improved edit profile request, created showToast extension function.

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -140,7 +140,7 @@
 
     <sdumchykov.androidApp.presentation.custom.GoogleButton
         android:id="@+id/buttonSignUpSignInWithGoogle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="@dimen/dimension_40dp"
         android:layout_marginHorizontal="@dimen/dimension_16dp"
 
