--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -134,14 +134,15 @@
         style="@style/widthHeightIsWrapContent"
         android:layout_marginTop="@dimen/dimension_8dp"
 
-        android:text="@string/profession"
         android:textAppearance="@style/additionalTextAppearance"
 
         app:layout_constraintBottom_toTopOf="@id/textViewMainAddress"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewMainName"
-        tools:ignore="TextContrastCheck" />
+
+        tools:ignore="TextContrastCheck"
+        tools:text="@string/profession" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textViewMainAddress"
@@ -149,14 +150,15 @@
         android:layout_marginTop="@dimen/dimension_16dp"
         android:layout_marginBottom="@dimen/dimension_52dp"
 
-        android:text="@string/address"
         android:textAppearance="@style/additionalTextAppearance"
 
         app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalMain050"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewMainProfession"
-        tools:ignore="TextContrastCheck" />
+
+        tools:ignore="TextContrastCheck"
+        tools:text="@string/address" />
 
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/flowMainLinks"
