--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="custom_blue">#FF242235</color>
+    <color name="custom_gray_2">#FFB2B2B3</color>
+    <color name="custom_white">#FFFAFAFA</color>
+    <color name="orange">#FFFB5E06</color>
 </resources>
