--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,7 @@
     android:background="@color/custom_blue"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ui.AuthActivity">
+    tools:context=".ui.signup.SignUpActivity">
 
     <LinearLayout
         android:id="@+id/layoutTop"
