--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="custom_blue">#FF242235</color>
     <color name="custom_gray">#FF18181F</color>
     <color name="custom_gray_2">#FFB2B2B3</color>
+    <color name="custom_gray_3">#FF828282</color>
     <color name="custom_orange">#FFFB5E06</color>
     <color name="custom_orange_a040">#66FB5E06</color>
     <color name="custom_white">#FFFAFAFA</color>
