--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,15 +6,6 @@
     app:startDestination="@id/signUpFragment">
 
     <fragment
-        android:id="@+id/myContactsFragment"
-        android:name="com.dumchykov.socialnetworkdemo.ui.mycontacts.MyContactsFragment"
-        android:label="fragment_my_contacts"
-        tools:layout="@layout/fragment_my_contacts">
-        <action
-            android:id="@+id/action_myContactsFragment_to_detailsFragment"
-            app:destination="@id/detailsFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/detailsFragment"
         android:name="com.dumchykov.socialnetworkdemo.ui.details.DetailsFragment"
         android:label="fragment_details"
@@ -25,22 +16,22 @@
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up">
         <action
-            android:id="@+id/action_signUpFragment_to_myProfileFragment"
-            app:destination="@id/myProfileFragment"
+            android:id="@+id/action_signUpFragment_to_pager"
+            app:destination="@id/pagerFragment"
             app:popUpTo="@id/signUpFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/myProfileFragment"
-        android:name="com.dumchykov.socialnetworkdemo.ui.myprofile.MyProfileFragment"
-        android:label="fragment_my_profile"
-        tools:layout="@layout/fragment_my_profile">
+        android:id="@+id/pagerFragment"
+        android:name="com.dumchykov.socialnetworkdemo.ui.pager.PagerFragment"
+        android:label="Pager"
+        tools:layout="@layout/fragment_pager">
         <action
-            android:id="@+id/action_myProfileFragment_to_myContactsFragment"
-            app:destination="@id/myContactsFragment" />
-        <action
-            android:id="@+id/action_myProfileFragment_to_signUpFragment"
+            android:id="@+id/action_pager_to_signUpFragment"
             app:destination="@id/signUpFragment"
             app:popUpTo="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_pagerFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
     </fragment>
 </navigation>
