--- a/app/src/main/res/layout/fragment_my_contacts.xml
+++ b/app/src/main/res/layout/fragment_my_contacts.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -7,7 +8,6 @@
     tools:context=".ui.mycontacts.MyContactsFragment">
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/custom_blue"
@@ -84,4 +84,17 @@
             tools:listitem="@layout/item_contact" />
 
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/custom_orange"
+        android:contentDescription="@null"
+        android:src="@drawable/ic_orange_trash_can"
+        android:visibility="gone"
+        app:tint="@color/white" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
