--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="custom_gray_2">#FFB2B2B3</color>
     <color name="custom_gray_3">#FF828282</color>
     <color name="custom_gray_4">#FFE7E7E7</color>
+    <color name="custom_gray_5">#FFBDBDBD</color>
     <color name="custom_orange">#FFFB5E06</color>
     <color name="custom_orange_a040">#66FB5E06</color>
     <color name="custom_white">#FFFAFAFA</color>
